[package]
name = "bevy-postgrest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.0"
ehttp = "0.5.0"
url = "2.5.0"
serde = { version = "1.0.197", features = ["derive"] }

[dev-dependencies]
bevy_http_client = "0.5.1"
bevy-gotrue = { path = "../bevy-gotrue/" }
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.8.0", features = ["serde"] }
serde_json = "1.0.117"
