[package]
name = "bevy-postgrest"
version = "0.1.0"
edition = "2021"
description = "postgrest bindings for bevy apps"
repository = "https://github.com/bytemunch/bevy-postgrest"
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.15.0"
ehttp = "0.5.0"
url = "2.5.0"
serde = { version = "1.0.197", features = ["derive"] }

[dev-dependencies]
bevy_http_client = "0.7"
bevy-gotrue = "0.2"
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.8.0", features = ["serde"] }
serde_json = "1.0.117"
